<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/IniciarSeLbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="32dp"
        android:text="@string/iniciar_sesion"
        android:textColor="#32435F"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <TextView
        android:id="@+id/usuarioLbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="24dp"
        android:text="@string/usuario"
        android:textColor="#32435F"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/IniciarSeLbl" />

    <EditText
        android:id="@+id/nombreUsuarioTxf"
        android:layout_width="330dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:drawableStart="@drawable/ic_user_login"
        android:ems="10"
        android:hint="@string/nombre_de_usuario"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usuarioLbl" />

    <TextView
        android:id="@+id/contrasenaLbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="16dp"
        android:text="@string/contrase_a"
        android:textColor="#32435F"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nombreUsuarioTxf" />

    <EditText
        android:id="@+id/contrasenaTxf"
        android:layout_width="330dp"
        android:layout_height="48dp"
        android:layout_marginTop="12dp"
        android:drawableStart="@drawable/ic_password_login"
        android:ems="10"
        android:hint="@string/contrase_a"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contrasenaLbl" />

    <Button
        android:id="@+id/iniciarSeBtn"
        android:layout_width="330dp"
        android:layout_height="55dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="41dp"
        android:backgroundTint="#A9823D"
        android:onClick="loginUser"
        android:text="@string/iniciar"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contrasenaTxf" />

    <TextView
        android:id="@+id/noCuentaLbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="8dp"
        android:text="@string/no_tienes_cuenta"
        android:textColor="#2E3C59"
        app:layout_constraintEnd_toStartOf="@+id/registrateLbl"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iniciarSeBtn" />

    <TextView
        android:id="@+id/registrateLbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:onClick="launchUserRegister"
        android:text="@string/registrate"
        android:textColor="#DD2C00"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.715"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iniciarSeBtn" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="0dp"
        android:layout_height="110dp"
        android:scaleType="fitCenter"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/evxtal5uuaanqlx"
        tools:visibility="visible" />
</androidx.constraintlayout.widget.ConstraintLayout>