<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/ic_warning" />

    <TextView
        android:id="@+id/textview"
        android:layout_width="392dp"
        android:layout_height="112dp"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:layout_below="@id/imageView"
        android:text="@string/dialgo_conf"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textview"
        android:layout_margin="15dp"
        android:layout_centerHorizontal="true">

        <TextView
            android:id="@+id/okay_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="70dp"
            android:text="@string/aceptar"
            android:textStyle="bold"
            android:textColor="#3F51B5"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/cancel_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_toEndOf="@id/okay_text"
            android:text="@string/cancelar"
            android:textStyle="bold"
            android:textColor="#FF0000"
            android:textSize="20sp" />

    </RelativeLayout>

</RelativeLayout>